gcc/testsuite/gdc.test/fail_compilation/fail4269g.d

int[2] d;
static if(is(typeof(Xg.init))) {}
alias d[1] Xg;

void main() {}
